[package]
name = "expr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4"
nix = { version = "0.29", features = ["process", "signal"] }

closeloop-cli = { path = "../closeloop-cli" }
openloop-cli = { path = "../openloop-cli" }
