[package]
name = "openloop-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.8"
nix = { version = "0.29", features = ["process", "signal"] }
chrono = "0.4"
regex = "1.11.1"
